added note about regrading with teams

--- a/vignettes/c-extended-capability-teams.Rmd
+++ b/vignettes/c-extended-capability-teams.Rmd
@@ -68,6 +68,8 @@ This exact function call assumes that example-team-grading-directory-week09-regr
 
 We will skip the process of grading because that is shown in the "how-to-grade-with-gradetools" vignette.
 
+When regrading with `assist_regrading()` the only difference when team grading is `teams_to_regrade` must be provided and `students_to_regrade` must be set to `NULL`.
+
 ## Final notes  
 The assist grading function handles teams as individual students in the grading progress log. The final grade sheet will have a row per student but the grading progress log will have one row per team. This internal difference does not change the process of grading but may be confusing to a user who wanted to look through their grading progress log.
 
