vignette: add what happens if components missing
ref #13

--- a/vignettes/a-grading-with-gradetools.Rmd
+++ b/vignettes/a-grading-with-gradetools.Rmd
@@ -126,7 +126,7 @@ From the previous sections in this vignette, we already know our rubric and rost
 
 The `example_student_identifier` corresponds to any of the identifiers present in the `student_identifier` column of the roster.
 
-The `example_assignment_path` is the path where the assignment(s) associated with the example_student_identifier are located.
+The `example_assignment_path` is the path where the file(s) associated with the submission of example_student_identifier are located.
 
 The `example_feedback_path` is the path where the grader wishes to save the feedback file associated with the `example_student_identifier`. The extension of this path dictates the file type. The current options for extensions are "Rmd", "md", "docx", "html", "pdf". The feedback files are knitted to the accompanying file type (except for Rmd files): GitHub, Word, html, pdf documents respectively.
 
